--- a/ExerciseASolution/ExerciseASolution.csproj
+++ b/ExerciseASolution/ExerciseASolution.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="uldahlalex.websocket.boilerplate" Version="2.0.*" />
+  </ItemGroup>
+  
 </Project>
