--- a/ExerciseBSolution/package.json
+++ b/ExerciseBSolution/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ws-request-hook": "1.x",
+    "ws-request-hook": "1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-use-websocket": "^4.11.1"
