--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
-title: ""
+title: "" 
+description: ""  
+logo: false 
+show_downloads: false  
+github:
+  is_project_page: false 
 theme: jekyll-theme-minimal
 markdown: GFM
