--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
-title: "" 
-description: ""  
-logo: false 
-show_downloads: false  
+title: false
+name: false
+description: false
 github:
-  is_project_page: false 
+  is_project_page: false
+  is_user_page: false
+  owner_name: false
+  repository_name: false
+header_pages: false
 theme: jekyll-theme-minimal
 markdown: GFM
