--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,3 @@
-title: false
-name: false
-description: false
-github:
-  is_project_page: false
-  is_user_page: false
-  owner_name: false
-  repository_name: false
-header_pages: false
+title: ""
 theme: jekyll-theme-minimal
 markdown: GFM
